Fix contact on IE 11

--- a/css/main.css
+++ b/css/main.css
@@ -677,7 +677,8 @@ nav a#openup {
 /* media offers start */
 @media (min-width: 602px) {
   .offer-img {
-    min-height: 380px;
+    height: auto;
+    min-height: 350px;
     max-height: 450px;
   }
 
@@ -1156,6 +1157,7 @@ footer p {
 /* contact start */
 
 .contact-socials {
+  min-width: 200px;
   max-width: 500px;
   padding-bottom: 25px;
   margin: 0 auto;
